[package]
name = "sise"
version = "0.7.1-pre"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
edition = "2018"
description = "SISE (Simple S-expression) parser, serializer and utilities library."
repository = "https://github.com/eduardosm/rust-sise"
keywords = ["s-expression", "sexp", "sexpr"]
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["std"]
std = []

[dependencies]
