[package]
name = "sise-decoder"
version = "0.1.0"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
edition = "2018"
description = "SISE (Simple S-expression) parser."
repository = "https://github.com/eduardosm/rust-sise"
license = "MIT/Apache-2.0"

[dependencies]
sise = { path = "../sise", version = "=0.1.0" }
