[package]
name = "sise-encoder"
version = "0.1.0"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
description = "SISE (Simple S-expression) serializer."
repository = "https://github.com/eduardosm/rust-sise"
license = "MIT/Apache-2.0"

[dependencies]
sise = { path = "../sise", version = "=0.1.0" }

[dev-dependencies]
sise-decoder = { path = "../sise-decoder", version = "=0.1.0" }
