[package]
name = "sise-read-util"
version = "0.2.0"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
edition = "2018"
description = "SISE (Simple S-expression) read utilities."
repository = "https://github.com/eduardosm/rust-sise"
license = "MIT/Apache-2.0"

[dependencies]
sise = { path = "../sise", version = "=0.2.0" }
